--- a/mantraui/src/main/res/layout/activity_news.xml
+++ b/mantraui/src/main/res/layout/activity_news.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="sample" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
