--- a/mantraui/src/main/res/layout/fragment_gallery.xml
+++ b/mantraui/src/main/res/layout/fragment_gallery.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.yuvi.mantraui.TouchImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
