--- a/mantraui/src/main/res/layout/view_youtubeplayer.xml
+++ b/mantraui/src/main/res/layout/view_youtubeplayer.xml
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <com.google.android.youtube.player.YouTubePlayerView
-        android:id="@+id/youtube"
+        android:id="@+id/youtube_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
