--- a/mantraui/src/main/res/values/ids.xml
+++ b/mantraui/src/main/res/values/ids.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="container" type="id"/>
+    <item name="ll_container" type="id"/>
+    <item name="drawable" type="id"/>
+    <item name="navview" type="id"/>
+    <item name="bottomsheet" type="id"/>
+    <item name="toolbar" type="id"/>
 </resources>
