--- a/mantraui/src/main/res/layout/item_gridmenu.xml
+++ b/mantraui/src/main/res/layout/item_gridmenu.xml
@@ -6,19 +6,20 @@
     android:background="#F5F5F5"
     app:cardElevation="2dp"
     android:id="@+id/cv_menu"
-    app:cardUseCompatPadding="true"
-    app:contentPadding="8dp">
+    app:cardUseCompatPadding="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#F5F5F5"
         android:gravity="center"
+        android:padding="8dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/ic_action_close" />
 
         <TextView
