--- a/mantraui/src/main/res/layout/layout_type_news_2.xml
+++ b/mantraui/src/main/res/layout/layout_type_news_2.xml
@@ -44,5 +44,15 @@
             android:text="title"
             android:textColor="#727272"
             android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:maxLines="1"
+            android:text="date"
+            android:textColor="#727272"
+            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
