--- a/mantraui/src/main/res/layout/layout_type_videos_2.xml
+++ b/mantraui/src/main/res/layout/layout_type_videos_2.xml
@@ -52,5 +52,16 @@
             android:text="2 hrs ago"
             android:textColor="#727272"
             android:textSize="14sp" />
+
+
+        <TextView
+            android:id="@+id/tv_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:maxLines="2"
+            android:text="2 hrs ago"
+            android:textColor="#727272"
+            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
