--- a/mantraui/src/main/res/layout/layout_type_gallery_1.xml
+++ b/mantraui/src/main/res/layout/layout_type_gallery_1.xml
@@ -31,7 +31,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="title"
-            android:textColor="#212121"
+            android:textColor="@android:color/white"
             android:textSize="16sp" />
 
         <TextView
