--- a/mantraui/src/main/res/values/ids.xml
+++ b/mantraui/src/main/res/values/ids.xml
@@ -8,4 +8,5 @@
     <item name="toolbar" type="id"/>
     <item name="home" type="id"/>
     <item name="sliderlayout" type="id"/>
+    <item name="bannerimage" type="id"/>
 </resources>
