--- a/hamroui/src/main/res/layout/activity_gallery_detail.xml
+++ b/hamroui/src/main/res/layout/activity_gallery_detail.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
         android:src="@drawable/ic_action_close" />
 
 </RelativeLayout>
